# aneris

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE_PROCEDURE.md  circle.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci-cd-workflow.yml  ci.yml  publish-tagged-to-pypi.yml  publish.yml
aneris/: __init__.py  _io.py  _version.py  cli.py  compat.py  convenience.py  downscaling.py  errors.py  gridding.py  harmonization.py  harmonize.py  io.py  methods.py  tutorial.py  utils.py  workflow.py
aneris/cmip6/: __init__.py  cmip6_utils.py  driver.py
ci/: .coveragerc  environment-conda-default.txt  environment-conda-default.yml  environment-conda-forge.txt  environment-conda-forge.yml  travis-install-miniconda.sh
ci/py2/: Dockerfile
ci/py3/: Dockerfile
doc/: .gh-config  Makefile  api.rst  cli.rst  conf.py  config.rst  data.rst  environment.yml  examples.rst  foo.rst  index.rst  install.rst  make_logo.py  requirements.txt  theory.rst  tutorial.ipynb
doc/source/: api.rst  budget_method.ipynb  conf.py  config.rst  contribute.rst  convenience.ipynb  data.rst  design.rst  index.rst  install.rst  make_logo.py  theory.rst  tutorial.ipynb
doc/source/_bib/: index.bib
docker/: update_deps.sh
docker/ci/: Dockerfile
notebooks/: environment.yaml  grid.ipynb  multistageharmonisation.py  utils.py
scripts/: aneris
src/aneris/: __init__.py  _io.py  cli.py  convenience.py  errors.py  grid.py  harmonize.py  methods.py  tutorial.py  utils.py
src/aneris/cmip6/: __init__.py  cmip6_utils.py  driver.py
src/aneris/downscaling/: __init__.py  core.py  data.py  intensity_convergence.py  methods.py
tests/: conftest.py  test_cmip6_utils.py  test_convenience.py  test_default_decision_tree.py  test_foo.py  test_harmonize.py  test_io.py  test_regression.py  test_tutorials.py  test_utils.py
tests/ci/: README.md  download_data.py  make_output.sh  run_on_ci.sh  test_regression.py  upload_input.sh  upload_output.sh
tests/test_data/: all_touched.nc  aneris_ar6.yaml  aneris_full_ar6.yaml  aneris_global_ar6.yaml  aneris_global_only.yaml  aneris_mock_pipeline_prototype.yaml  aneris_pipeline_progress.yaml  aneris_regions_sectors.yaml  generate_v2_exp_values.ipynb  global_sectors_harmonized.xlsx  global_sectors_metadata.xlsx  history.csv  history.xls  history_ar6.xls  history_full_ar6.xls  history_global_ar6.xls  history_global_only.xls  history_global_sectors.xls  history_mock_pipeline_prototype.xls  history_pipeline_progress.xls  model.xls  model.xlsx  model_ar6.xls  model_full_ar6.xls  model_global_ar6.xls  model_global_only.xls  model_global_sectors.xls  model_mock_pipeline_prototype.xls  model_pipeline_progress.xls  model_regions_sectors.xls  regenerate.sh  regions.csv  regions_pipeline_progress.csv  regions_regions_sectors.csv  test_basic_run.xlsx  test_full_ar6.xlsx  test_global_ar6.xlsx  test_global_only.xlsx  test_global_sectors.xlsx  test_mock_pipeline_prototype.xlsx  (+3 more)
